Readme file improved, CsvToParquet fixed to overwrite destination and CsvToParquet unit test implemented